* Added all the graph-related pipes in Gremlin to Pipes
* @FilterPipe.Filter@ no longer exists as now @Compare@ should be used
* Full support for @Predicate@ from Blueprints
* Added @ToStringPipe@ to support streaming results out as as @Object.toString()@
* Added branch factor support to all @VerticesVerticesPipe@ and @VerticesEdgesPipe@ classes

h3. Version 2.3.0 (March 20, 2013)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.3.0</version>
</dependency>
```

* Breaking API change with @GroupByReducePipe@ -- @Iterator<V>@ is now @List<V>@
* Fixed a bug in @GroupByReducePipe@ when @LoopPipe@ is used in conjunction
* Minor speed improvement to path calculations
* Moved @IdentityPipe@ to root package as it is not a @TransformPipe@
* Added @<S,E>@ typing to @TransformPipe@ interface and updated respective pipe implementations
* @ExceptFilterPipe@ and @RetainFilterPipe@ support @String[]@ of named steps to reference as collection
* Added sub-interfaces of @LazySideEffectPipe@ and @GreedySideEffectPipe@ to specify when sideeffect is ready
* Made @Row.getColumnNames()@ public
* Better support for indexing @AsPipes@ within a @MetaPipe@ in @FluentUtility@
* Added @TransformPipe.Order@ enums for ordering specifications in @OrderPipe@ and @OrderMapPipe@
* Added @OrderMapPipe@ to sort a map given a @PipeFunction@ and then emit map keys
* Added @ShufflePipe@ to gather up all objects then randomize their output

==<hr/>==

h3. Version 2.2.0 (December 19, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.2.0</version>
</dependency>
```

* Fixed a comparator bug in @OrderPipe@
* Garbage collector optimized @CycliePathFilterPipe@ to avoid newing a set each iteration
* Added @TransformPipe@ interface to denote a transform operation so path joins are ignored

==<hr/>==

h3. Version 2.1.0 (August 4, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>