@@ -22,6 +22,7 @@ h3. Version 2.4.0 (NOT OFFICIALLY RELEASE YET)
 * Full support for @Predicate@ from Blueprints
 * Added @ToStringPipe@ to support streaming results out as as @Object.toString()@
 * Added branch factor support to all @VerticesVerticesPipe@ and @VerticesEdgesPipe@ classes
+* @IntervalFilterPipe@ now requires two @Comparables@ not just generic @Object@
 
 h3. Version 2.3.0 (March 20, 2013)
 
